# tuibe

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  run.sh  tuibe.nix
src/: common_config.rs  config.rs  config_error.rs  config_file_handler.rs  error.rs  feed.rs  file_handler.rs  main.rs  rss_config.rs  sender_ext.rs  video.rs
src/backend/: channel.rs  mod.rs  rss.rs
src/config/: common.rs  common_config.rs  config.rs  config_file_handler.rs  config_message_channel.rs  error.rs  file_handler.rs  mod.rs  rss.rs  rss_config.rs
src/interface/: actions.rs  app.rs  backend_provider.rs  component.rs  config_provider.rs  dialog.rs  error_handler.rs  feed.rs  feed_view.rs  list.rs  loading_indicator.rs  main_view.rs  mod.rs  status_label.rs  subscriptions.rs  ui.rs  video_list.rs
src/interface/backend/: mod.rs  rss_view.rs
src/interface/config/: rss.rs  rss_view.rs
