[package]
name = "tuibe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tuibe"

[dependencies]
async-trait = "0.1.58"
atom_syndication = "0.11.0"
chrono = "0.4.22"
crossterm = { version = "0.25.0", features = ["event-stream"] }
delegate = "0.8.0"
err-derive = "0.3.1"
flume = "0.10.14"
futures = "0.3.25"
futures-timer = "3.0.2"
log = "0.4.17"
parking_lot = "0.12.1"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
simplelog = "0.12.0"
sorted-vec = "0.8.1"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"
toml = "0.5.9"
tui = "0.19.0"
