[package]
name = "tuibe"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "tuibe"

[dependencies]
async-trait = "0.1.89"
atom_syndication = "0.12.7"
chrono = "0.4.42"
crossterm = { version = "0.29.0", features = ["event-stream"] }
delegate = "0.13.4"
flume = "0.11.1"
futures = "0.3.31"
futures-timer = "3.0.3"
log = "0.4.28"
parking_lot = "0.12.5"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
simplelog = "0.12.2"
sorted-vec = "0.8.10"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.9.8"
wl-clipboard-rs = "0.9.2"
